# rjsj-hw7

./: CMakeLists.txt  README.md  test.md
src/: ai_derived.cpp  ai_derived.h  parser.cpp  parser.h
